--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" href="images/logotitle.png" type="image/png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="A product landing page for a medication reminder app created for the FreeCodeCamp's Responsive Web Design Certification.">
-  <title>Remedi Mobile App</title>
+  <title>Dalatella</title>
   <style>
     body {
       font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
